--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="28dp"
 
+        android:fontFamily="@font/font"
         android:hint="@string/username_editText_hint"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/password_signin_edittext"
@@ -63,6 +64,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="80dp"
         android:ems="10"
+        android:fontFamily="@font/font"
         android:hint="@string/password_edittext"
         android:inputType="textPassword"
         android:textAlignment="center"
@@ -77,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:onClick="signInUser"
         android:text="@string/sign_in_button"
         android:textAlignment="center"
@@ -103,6 +106,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="72dp"
+        android:fontFamily="@font/font"
         android:onClick="signUpUser"
         android:text="@string/sign_up_button"
         android:textAlignment="center"
