--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -10,8 +10,9 @@
         android:id="@+id/name_textview"
         android:layout_width="56dp"
         android:layout_height="29dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:foregroundGravity="center"
         android:gravity="center"
         android:text="@string/name_section"
@@ -75,9 +76,10 @@
         android:id="@+id/credential_textview"
         android:layout_width="114dp"
         android:layout_height="29dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:foregroundGravity="center"
         android:gravity="center"
         android:text="@string/credentials_section"
@@ -186,6 +188,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:onClick="registerUser"
         android:text="@string/signup_textview"
         app:layout_constraintEnd_toEndOf="parent"
