--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="152dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:onClick="typeChosen"
         android:text="@string/type_homeowner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/font"
         android:onClick="typeChosen"
         android:text="@string/type_serviceprovider"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +45,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/font"
         android:onClick="typeChosen"
         android:text="@string/type_admin"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,6 +62,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="64dp"
+        android:fontFamily="@font/font"
         android:text="@string/type"
         android:textAlignment="center"
         android:textSize="30sp"
