--- a/app/src/main/res/layout/list_services.xml
+++ b/app/src/main/res/layout/list_services.xml
@@ -26,6 +26,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="200dp"
+                android:fontFamily="@font/font"
                 android:text="@string/service_name"
                 card_view:layout_constraintEnd_toStartOf="@+id/textview_service_value"
                 card_view:layout_constraintHorizontal_bias="0.0"
@@ -41,6 +42,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/font"
                 android:text="@string/service_rate"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toStartOf="@+id/textview_servicerate_value"
@@ -55,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:fontFamily="@font/font"
                 android:text="Placeholder"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
@@ -66,6 +69,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
+                android:fontFamily="@font/font"
                 android:text="Placeholder"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
